samples/_failures_safe/1761390873_ad4373_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_721361b9.c: In function ‘main’:
./samples/SAFE/__tmp_721361b9.c:135:5: error: expected expression at end of input
  135 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_721361b9.c:135:5: error: expected declaration or statement at end of input
